--- a/Project_Practice_Insurance_Cross_Selling_170525.ipynb
+++ b/Project_Practice_Insurance_Cross_Selling_170525.ipynb
@@ -1240,11 +1240,245 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 5. Примените основные методы по определению выбросов в данных"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5.1 Cтатистический подход по поиску выбросов"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.ensemble import IsolationForest"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Найдено выбросов по IQR: 2377273\n",
+            "Найдено выбросов по Z-score: 16911\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Для числовых признаков - не совпадает с num_cols, так как ['Driving_License', 'Region_Code', 'Previously_Insured', 'Policy_Sales_Channel'] - это хоть и числа, но по суть оцифрованные категориальные признаки\n",
+        "numeric_cols = ['Age', 'Annual_Premium', 'Vintage']\n",
+        "\n",
+        "# Метод IQR\n",
+        "def iqr_outliers(df, col):\n",
+        "    Q1 = df[col].quantile(0.25)\n",
+        "    Q3 = df[col].quantile(0.75)\n",
+        "    IQR = Q3 - Q1\n",
+        "    return df[(df[col] < (Q1 - 1.5*IQR)) | (df[col] > (Q3 + 1.5*IQR))]\n",
+        "\n",
+        "# Метод Z-score\n",
+        "def zscore_outliers(df, col, threshold=3):\n",
+        "    z = np.abs((df[col] - df[col].mean()) / df[col].std())\n",
+        "    return df[z > threshold]\n",
+        "\n",
+        "# Поиск выбросов\n",
+        "iqr_outliers_list = [iqr_outliers(df, col) for col in numeric_cols]\n",
+        "z_outliers_list = [zscore_outliers(df, col) for col in numeric_cols]\n",
+        "\n",
+        "print(f\"Найдено выбросов по IQR: {sum(len(x) for x in iqr_outliers_list)}\")\n",
+        "print(f\"Найдено выбросов по Z-score: {sum(len(x) for x in z_outliers_list)}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5.2 Настройка и применение DBSCAN"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.cluster import DBSCAN"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Очень медленно работает. Нужно поменять параметры"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# Масштабирование данных\n",
+        "scaler = StandardScaler()\n",
+        "X_scaled = scaler.fit_transform(df[numeric_cols])\n",
+        "\n",
+        "# DBSCAN\n",
+        "dbscan = DBSCAN(eps=1, min_samples=3, algorithm='kd_tree')\n",
+        "outliers = dbscan.fit_predict(X_scaled)\n",
+        "\n",
+        "# Помечаем выбросы (-1)\n",
+        "df['dbscan_outlier'] = outliers == -1\n",
+        "print(f\"Выбросов DBSCAN: {df['dbscan_outlier'].sum()}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5.3 Обучение модели без выбросов"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Обучим на данныз без выбросов две модели: бейзлайн и модель на предобработанных данных (кодирование категориальных признаков + нормализация). Вспомним, что вторая модель показывала хорошие метрики и обучалась быстро. \n",
+        "По сути, нам нужно сначала убрать выбросы, а потом пройти тот же путь, что и раньше. Позже можно будет оптимизировать код, чтобы не было повторов и копирование кода. Возможно, сделаем функцию"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Убираем выбросы, помеченные до этого"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Объединяем все методы\n",
+        "df['combined_outlier'] = df['dbscan_outlier'] | df[numeric_cols].apply(\n",
+        "    lambda x: any(col in iqr_outliers_list[i] or col in z_outliers_list[i] \n",
+        "              for i, col in enumerate(numeric_cols)), axis=1)\n",
+        "\n",
+        "# Очищенные данные\n",
+        "clean_df = df[~df['combined_outlier']]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Дальше - повтор кода. Разделение на train/test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    clean_df.drop('Response', axis=1), \n",
+        "    clean_df['Response'],\n",
+        "    test_size=0.3,\n",
+        "    random_state=42\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Обработка категориальных признаков и нормализация"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_train_proc = X_train.copy()\n",
+        "X_test_proc = X_test.copy()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "le = LabelEncoder()\n",
+        "for col in cat_cols:\n",
+        "    X_train_proc[col] = le.fit_transform(X_train_proc[col])\n",
+        "    X_test_proc[col] = le.transform(X_test_proc[col])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "scaler = MinMaxScaler()\n",
+        "X_train_proc[all_cols] = scaler.fit_transform(X_train_proc[all_cols])\n",
+        "X_test_proc[all_cols] = scaler.transform(X_test_proc[all_cols])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Обучение моделей и сравнение метрик"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "lr_base = LogisticRegression(class_weight=class_weight_dict, max_iter=1000)\n",
+        "results['Baseline + no outliers'] = evaluate_imbalanced(lr_base, X_train_base, X_test_base, y_train, y_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "lr_proc = LogisticRegression(class_weight=class_weight_dict, max_iter=1000)\n",
+        "results['Processed + no outliers'] = evaluate_imbalanced(lr_proc, X_train_proc[all_cols], X_test_proc[all_cols], y_train, y_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "results_df = pd.DataFrame(results).T.round(3)\n",
+        "\n",
+        "key_metrics = ['F1-score', 'PR-AUC', 'Balanced Accuracy', 'G-Mean']\n",
+        "results_df[key_metrics]"
+      ]
     }
   ],
   "metadata": {
